--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-schedule": "^2.1.1",
-    "puppeteer": "^22.11.2"
+    "nodemailer": "^6.9.15",
+    "puppeteer": "^22.15.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-proxy": "^1.0.2"
   }
 }
